--- a/microsetta_interface/templates/new_results_page.jinja2
+++ b/microsetta_interface/templates/new_results_page.jinja2
@@ -1400,7 +1400,7 @@
                 <div class="how_you_compare_section">
                     <h4>{{ _('Microbiome Map') }}</h4>
                     <p>
-                    {{ _('Where are you on the') }} <a class="fake-tab" href="#microbial-map" data-link="#microbial-map-tab">{{ _('Microbiome Map') }}</a>?
+                        {{ _('Where are you on the <a class="fake-tab" href="#microbial-map" data-link="#microbial-map-tab">Microbiome Map</a>?') }}
                     </p>
                 </div>
               </div>
@@ -1508,10 +1508,7 @@
                               <img class="diversity-icon" src='/static/img/vegetables.png'>
                           </div>
                           <div class="col-sm-8 diversity-text">
-                              <span id="beta_diversity_plants_per_week_value" class="info-loader font-weight-bold">...</span> 
-                              {{ _('of people with a microbiome like yours eat') }} 
-                              <span id="beta_diversity_plants_per_week_response" class="info-loader text-success">...</span>
-                              {{ _('plants per week') }}
+                              {{ _('<span id="beta_diversity_plants_per_week_value" class="info-loader font-weight-bold">...</span> of people with a microbiome like yours eat <span id="beta_diversity_plants_per_week_response" class="info-loader text-success">...</span> plants per week') }}
                           </div>
                       </div>
                       <div class="col diversity-compare">
@@ -1519,8 +1516,7 @@
                               <img class="diversity-icon" src='/static/img/diet.png'>
                           </div>
                           <div class="col-sm-8 diversity-text">
-                              <span id="beta_diversity_diet_type_value" class="info-loader font-weight-bold">...</span> 
-                              {{ _('of people with a microbiome like yours had a similar diet (e.g. omnivore, vegetarian, etc.)') }}
+                              {{ _('<span id="beta_diversity_diet_type_value" class="info-loader font-weight-bold">...</span> of people with a microbiome like yours had a similar diet (e.g. omnivore, vegetarian, etc.)') }}
                           </div>
                       </div>
                   </div>
@@ -1536,10 +1532,7 @@
                               <img class="diversity-icon" src='/static/img/probiotics.png'>
                           </div>
                           <div class="col-sm-8 diversity-text">
-                              <span id="beta_diversity_probiotics_value" class="info-loader font-weight-bold">...</span> 
-                              {{ _('of people with a microbiome like yours') }}
-                              <span id="beta_diversity_probiotics_response" class="info-loader text-success">...</span>
-                              {{ _('take probiotics') }}
+                              {{ _('<span id="beta_diversity_probiotics_value" class="info-loader font-weight-bold">...</span> of people with a microbiome like yours <span id="beta_diversity_probiotics_response" class="info-loader text-success">...</span> take probiotics') }}
                           </div>
                       </div>
                       <div class="col diversity-compare">
@@ -1547,8 +1540,7 @@
                               <img class="diversity-icon" src='/static/img/vitamins.png'>
                           </div>
                           <div class="col-sm-8 diversity-text">
-                              <span id="beta_diversity_multivitamin_value" class="info-loader font-weight-bold">...</span> 
-                              {{ _('of people with a microbiome like yours take vitamins') }}
+                              {{ _('<span id="beta_diversity_multivitamin_value" class="info-loader font-weight-bold">...</span> of people with a microbiome like yours take vitamins') }}
                           </div>
                       </div>
                   </div>
@@ -1564,9 +1556,7 @@
                               <img class="diversity-icon" src='/static/img/exercise.png'>
                           </div>
                           <div class="col-sm-8 diversity-text">
-                              <span id="beta_diversity_exercise_value" class="info-loader font-weight-bold">...</span> 
-                              {{ _('of people with a microbiome like yours exercise') }} 
-                              <span id="beta_diversity_exercise_response" class="info-loader text-success">...</span>
+                              {{ _('<span id="beta_diversity_exercise_value" class="info-loader font-weight-bold">...</span> of people with a microbiome like yours exercise <span id="beta_diversity_exercise_response" class="info-loader text-success">...</span>') }}
                           </div>
                       </div>
                       <div class="col diversity-compare">
@@ -1574,10 +1564,7 @@
                               <img class="diversity-icon" src='/static/img/sleep.png'>
                           </div>
                           <div class="col-sm-8 diversity-text">
-                              <span id="beta_diversity_sleep_value" class="info-loader font-weight-bold">...</span> 
-                              {{ _('of people with a microbiome like yours get') }}
-                              <span id="beta_diversity_sleep_response" class="info-loader text-success">...</span>
-                              {{ _('of sleep at night') }}
+                              {{ _('<span id="beta_diversity_sleep_value" class="info-loader font-weight-bold">...</span> of people with a microbiome like yours get <span id="beta_diversity_sleep_response" class="info-loader text-success">...</span> of sleep at night') }}
                           </div>
                       </div>
                   </div>
@@ -1593,8 +1580,7 @@
                               <img class="diversity-icon" src='/static/img/age.png'>
                           </div>
                           <div class="col-sm-8 diversity-text">
-                              <span id="beta_diversity_age_value" class="info-loader font-weight-bold">...</span> 
-                              {{ _('of people with a microbiome like yours were the same age as you') }}
+                              {{ _('<span id="beta_diversity_age_value" class="info-loader font-weight-bold">...</span> of people with a microbiome like yours were the same age as you') }}
                           </div>
                       </div>
                       <div class="col diversity-compare">
@@ -1602,8 +1588,7 @@
                               <img class="diversity-icon" src='/static/img/gender.png'>
                           </div>
                           <div class="col-sm-8 diversity-text">
-                              <span id="beta_diversity_sex_value" class="info-loader font-weight-bold">...</span>
-                              {{ _('of people with a microbiome like yours were the same gender') }}
+                              {{ _('<span id="beta_diversity_sex_value" class="info-loader font-weight-bold">...</span> of people with a microbiome like yours were the same gender') }}
                           </div>
                       </div>
                   </div>
