--- a/microsetta_interface/templates/sitebase.jinja2
+++ b/microsetta_interface/templates/sitebase.jinja2
@@ -99,8 +99,8 @@
                                     {{ _('The') }} "<span class="skip-text">{{ _('SKIP') }}</span>" {{ _('option can be found at the top right corner of each question.') }}
                                     <ul>
                                         <li>{{ _('Skipping a question clears your selected answer and hides the options.') }}</li>
-                                        <li>{{ _('Click') }} "<span class="skip-text">{{ _('DISPLAY') }}</span>" {{ _('to bring back the hidden response options.') }}</li>
-                                        <li>{{ _('If you want to reset an incorrect answer quickly, click') }} "<span class="skip-text">{{ _('SKIP') }}</span>" {{ _('then') }} "<span class="skip-text">{{ _('DISPLAY') }}</span>".</li>
+                                        <li>{{ _('Click "<span class="skip-text">DISPLAY</span>" to bring back the hidden response options.') }}</li>
+                                        <li>{{ _('If you want to reset an incorrect answer quickly, click "<span class="skip-text">SKIP</span>" then "<span class="skip-text">DISPLAY</span>".') }}</li>
                                         <li>{{ _('Skipping a question logs a blank response and counts towards completing a survey.') }}</li>
                                     </ul>
                                 </div>
