Changes based on PR feedback

--- a/microsetta_interface/templates/reports.jinja2
+++ b/microsetta_interface/templates/reports.jinja2
@@ -95,7 +95,7 @@
                 </div>
             </div>
             {% endfor %}
-            {% for er in external_reports_sample %}
+            {% for er in external_reports_kit %}
             <div class="row mb-2">
                 <div class="barcode-col">
                     <img src="/static/img/tube_icon.svg" width="24" height="24" />
