--- a/microsetta_interface/templates/new_results_page.jinja2
+++ b/microsetta_interface/templates/new_results_page.jinja2
@@ -1,5 +1,5 @@
 {% extends "sitebase.jinja2" %}
-{% set page_title = _("Sample Results") %}
+{% set page_title = _("Sample Report") %}
 {% set show_breadcrumbs = show_breadcrumbs %}
 
 {% block head %}
@@ -1665,7 +1665,7 @@
                   {{ _('There are many resources for microbiome information available online. If you\'d like to learn more, we recommend the site hosted by the <a href="https://asm.org/Browse-By-Topic/Newsroom/Clinical/Microbiome">American Society for Microbiology</a>, <a href="https://microbe.net/">microBEnet</a>, the <a href="http://www.probioticchart.ca/">Canadian Probiotics Chart</a>, and the <a href="https://gastro.org/aga-leadership/centers/aga-center-for-gut-microbiome-research-education/">American Gastroenterological Association</a>.') }}
                   </p>
 
-                  <h4 style="color:black;">{{ _('Datasets used in your results report') }}</h4>
+                  <h4 style="color:black;">{{ _('Datasets used in your report') }}</h4>
                   <p>
                   {{ _('The results shown in the Microbiome Maps portion of the report relied on data from many different publically accessible microbiome datasets. These different datasets, and links to them, are listed below.') }}
                   </p>
