--- a/microsetta_interface/templates/update_address.jinja2
+++ b/microsetta_interface/templates/update_address.jinja2
@@ -90,6 +90,7 @@ $(document).ready(function(){
                     address_1: "required",
                     city: "required",
                     state: "required",
+                    phone: "required",
                     postal: {
                         required: true,
                         remote: {
@@ -121,6 +122,7 @@ $(document).ready(function(){
                     address_1: "{{ _('Please enter your street address.') }}",
                     city: "{{ _('Please enter your city.') }}",
                     state: "{{ _('Please select your state.') }}",
+                    phone: "{{ _('Please enter your phone number.') }}",
                     postal: {
                         required: "{{ _('Please enter your postal code.') }}",
                         remote: "{{ _('Sorry, we were unable to verify your address. Please check your information and try again.') }}"
@@ -223,7 +225,7 @@ $(document).ready(function(){
                         <input id="postal" name="postal" class="form-control" type="text" value="{{ user_info['postal_code'] |e }}" />
                     </div>
                     <div class="form-group mb-2">
-                        <label for="phone" name="phone_label">{{ _('Phone Number') }}</label>
+                        <label for="phone" name="phone_label">{{ _('Phone Number') }}*</label>
                         <input id="phone" name="phone" class="form-control" type="text" value="{{ user_info['phone'] |e }}" />
                     </div>
                     <div class="form-group mb-2">
