--- a/microsetta_interface/templates/admin_interested_users.jinja2
+++ b/microsetta_interface/templates/admin_interested_users.jinja2
@@ -33,7 +33,7 @@
             <div class="col-sm">
                 {{ user.last_name |e}}
             </div>
-            <div class="col-sm">
+            <div class="col-sm" style="word-wrap: break-word; overflow: hidden;">
                 {{ user.email |e}}
             </div>
             <div class="col-sm">
