--- a/microsetta_interface/templates/new_results_page.jinja2
+++ b/microsetta_interface/templates/new_results_page.jinja2
@@ -47,6 +47,11 @@
       width: 30%;
       margin: 20px;
     }
+    @media (max-width: 575.98px) {
+        div.diversity-compare {
+            width: 90%;
+        }
+    }
     .diversity-category {
       color: #006a96;
     }
@@ -116,6 +121,11 @@
         border-color: #006a96;
         width: 70%;
     }
+    @media (max-width: 575.98px) {
+        div.how_you_compare_section {
+            width: 100%;
+        }
+    }
     div.how_you_compare_section h3 {
       color: #006a96;
       font-weight: lighter;
@@ -147,7 +157,11 @@
       width: 35%;
       box-shadow: 0 4px 8px 0 rgb(0 0 0 / 20%), 0 6px 20px 0 rgb(0 0 0 / 19%);
     }
-
+    @media (max-width: 575.98px) {
+        div.your_sample_diversity_inset {
+            width: 100%;
+        }
+    }
     .scatter-bg {
       background-image: url('/static/img/scatter.png');
       background: url('/static/img/scatter.png');
