--- a/microsetta_interface/templates/account_details.jinja2
+++ b/microsetta_interface/templates/account_details.jinja2
@@ -132,7 +132,12 @@
         function verifyDeleteUserRequest(){
             let confirmMsg = "{{ _('You are requesting to delete your account.') }} " +
                 "{{ _('This operation cannot be undone.  Are you sure you want to delete this account?') }} ";
-                return window.confirm(confirmMsg);
+            
+            let reason = prompt("{{ _('Please provide a reason for deletion (Optional):') }}");
+            document.getElementById("user_delete_reason").value = reason;
+            
+            return window.confirm(confirmMsg);
+            
             }
     </script>
 {% endblock %}
@@ -472,6 +477,7 @@
                              method="post" action="/accounts/{{ account.account_id }}/request/remove"
                              onsubmit="return verifyDeleteUserRequest();">
                                   {{ _('If you wish to delete this account, please click the following button to submit your request to an administrator.') }}
+                            <input type="hidden" id="user_delete_reason" name="user_delete_reason" value="{{ account.user_delete_reason}}">
                             <button type="submit" class="btn btn-outline-danger">{{ _('Request Account Deletion') }}</button>
                             <br>
                             {{ _('IMPORTANT: Once you click this button, the request cannot be undone. Your account cannot be restored after it has been deleted.') }}
