--- a/microsetta_interface/templates/account_details.jinja2
+++ b/microsetta_interface/templates/account_details.jinja2
@@ -422,6 +422,7 @@
                 {% endif %}
             </div>
         </form>
+        <br><br>
         {% if admin_mode %}
         <br/>
         <form action="/admin/account_delete" method="post">
@@ -449,44 +450,45 @@
                     <button type=submit" class="btn btn-danger">{{ _('Delete Account') }}</button>
                 </div>
             </div>
-        </form>
         {% endif %}
+    
+        {% if not admin_mode and not CREATE_ACCT %}
+            {% if requested_deletion %}
+                <div class="container">
+                    <div class="row">
+                        <div class="col-12 {% if samples|length > 0 %}tooltipper{% endif %}" data-title="{{ _('Request account deletion.') }}">
+                            <p>
+                            </p>
+                                <center>
+                                {{ _('Your account removal request is being reviewed. You will be notified via email once your account has been deleted.') }}
+                                </center>
+                        </div>
+                    </div>
+                </div>
+            {% else %}
+                <div class="container">
+                    <div class="row">
+                        <div class="col-12 {% if samples|length > 0 %}tooltipper{% endif %}" data-title="{{ _('Request account deletion.') }}">
+                            <p>
+                            </p>
+                                <center>
+                                    <form name="request_delete_{{account.account_id}}_form"
+                                    method="post" action="/accounts/{{ account.account_id }}/request/remove"
+                                    onsubmit="return verifyDeleteUserRequest();">
+                                        {{ _('If you wish to delete this account, please click the following button to submit your request to an administrator.') }}
+                                    <input type="hidden" id="user_delete_reason" name="user_delete_reason" value="{{ account.user_delete_reason}}">
+                                    <br><br>
+                                    <button type="submit" class="btn btn-outline-danger">{{ _('Request Account Deletion') }}</button>
+                                    <br><br>
+                                    {{ _('IMPORTANT: Once you click this button, the request cannot be undone. Your account cannot be restored after it has been deleted.') }}
+                                    </form>
+                                </center>
+                        </div>
+                    </div>
+                </div>
+            {% endif %}
+        {% endif %}
+        </form>
     </div>
 </div>
-{% if not admin_mode %}
-    {% if requested_deletion %}
-        <div class="container">
-            <div class="row">
-                <div class="col-12 {% if samples|length > 0 %}tooltipper{% endif %}" data-title="{{ _('Request account deletion.') }}">
-                    <p>
-                    </p>
-                        <center>
-                        _("Your account removal request is being reviewed. You will be notified via email once your account has been deleted.")
-                        </center>
-                </div>
-            </div>
-        </div>
-    {% else %}
-        <div class="container">
-            <div class="row">
-                <div class="col-12 {% if samples|length > 0 %}tooltipper{% endif %}" data-title="{{ _('Request account deletion.') }}">
-                    <p>
-                    </p>
-                        <center>
-                            <form name="request_delete_{{account.account_id}}_form"
-                             method="post" action="/accounts/{{ account.account_id }}/request/remove"
-                             onsubmit="return verifyDeleteUserRequest();">
-                                  {{ _('If you wish to delete this account, please click the following button to submit your request to an administrator.') }}
-                            <input type="hidden" id="user_delete_reason" name="user_delete_reason" value="{{ account.user_delete_reason}}">
-                            <button type="submit" class="btn btn-outline-danger">{{ _('Request Account Deletion') }}</button>
-                            <br>
-                            {{ _('IMPORTANT: Once you click this button, the request cannot be undone. Your account cannot be restored after it has been deleted.') }}
-                            </br>
-                            </form>
-                        </center>
-                </div>
-            </div>
-        </div>
-    {% endif %}
-{% endif %}
 {% endblock %}
