--- a/microsetta_interface/templates/sitebase.jinja2
+++ b/microsetta_interface/templates/sitebase.jinja2
@@ -118,7 +118,7 @@
     </div>
 
     {% if admin_mode %}
-    <nav class="navbar fixed-top navbar-light bg-warning shadow">
+    <nav class="navbar fixed-top navbar-light bg-warning shadow px-3">
       <a class="btn btn-outline-success dropdown-toggle" href="#" role="button" id="adminDropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">{{ _('Admin Tools') }}</a>
       <ul class="dropdown-menu" aria-labelledby="adminDropdownMenuLink">
         <li><a class="btn btn-outline-success dropdown-item" href="/admin/system_message">{{ _('System Panel') }}</a></li>
