--- a/microsetta_interface/templates/request_account_deletion_confirm.jinja2
+++ b/microsetta_interface/templates/request_account_deletion_confirm.jinja2
@@ -25,7 +25,7 @@
 
 {% block content %}
 <center>
-    <div class="card account">
+    <div class="card card-account">
         <h2 class="centered">{{ _('Account Deletion Requested') }}</h2>        <div class="card-body">
             <center>
                 {{ _("We are sorry to see you go! Your request has been logged, and an administrator will review the request soon. You will receive an email notification once your account has been deleted.") }}
