Change alpha diversity metric

--- a/microsetta_interface/templates/new_results_page.jinja2
+++ b/microsetta_interface/templates/new_results_page.jinja2
@@ -1036,7 +1036,7 @@
         }
 
         // We override the default alpha_metric from state for this page.
-        let alpha_metric = "observed_features"
+        let alpha_metric = "shannon"
         for (let key in POST_DATA) {
             $.ajax(
                 {
